# deltadask

./: README.md  pyproject.toml
deltadask/: __init__.py
notebooks/: deltadask-demo.ipynb  deltadask-env.yml
tests/: test_public_interface.py
