[tool.poetry]
name = "deltadask"
version = "0.1.0"
description = ""
authors = ["Matthew Powers <matthewkevinpowers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
deltalake = "^0.8.1"
dask = "^2022.10.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "3.2.2"
pytest-describe = "^1.0.0"
beavis = "0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
